--- a/biome.json
+++ b/biome.json
@@ -18,8 +18,12 @@
 	},
 	"linter": {
 		"enabled": true,
+		"ignore": ["node_modules", "dist"],
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"style": {
+				"useImportType": "off"
+			}
 		}
 	},
 	"javascript": {
